Fix button spacing

--- a/src/block/initiative-tracker/editor.scss
+++ b/src/block/initiative-tracker/editor.scss
@@ -37,6 +37,10 @@ $color-border: #999;
 
 	.edit-character-buttons {
 		display: flex;
+		justify-content: space-evenly;
+	}
+
+	.character .edit-character-buttons {
 		justify-content: center;
 	}
 }
